tests/core/data/csl/InterfaceTests/InvalidDeclarations/missingReturnType.csl
// Method declaration has no returning type 
interface missingReturnType
{
	Foo(in string fooMe);

};


